CHANGELOG

UNRELEASED
  * FIX : #92 Parameters that can be set in the dashboard shouldn't have
  defaults
  * FEATURE : #51 multiple filters for a single conjunctive facet (tests)
  * FEATURE : Ability to modify any parameter of the state easily (#76 #84)
  * FEATURE : #69 Ability to know if a facet is refined, whatever the value

2.0.4
  * FIX : #82 Fix facet count on records with multiple values for a single
  facet
  * FEATURE: Add exhaustive attribute to a facet and removed useless timeout
  (#80)

2.0.3 - 2015-05-13
  * FIX : #72 add back the ability to do multiple disjunctive facetting on a
  single attribute
  * FEATURE : #73 method to replace the state, without triggering a change
  event : overrideStateWithoutTriggeringChangeEvent (use wisely)
  * FEATURE : #66 add setTypoTolerance to SearchParameters

2.0.2 - 2015-05-06
  * FIX : setHitsPerPage was creating a new property HitsPerPage instead of
  updating the currently available hitsPerPage

2.0.1
  * MEH : because of jsDelivr

2.0.0
  * FIX : set page to 0 if it might change the number of pages returned
  * FIX : handle distinct parameter automatically
  * FIX : batch response handler gets the proper search state
  * FEATURE : (breaking) Now peer depend on algoliasearch v3.1
  * FEATURE : (breaking) Facets stats and timeout infos are consistently
  grouped in the facet object in the SearchResults
  * FEATURE : (breaking) no more extra queries
  * FEATURE : (breaking) Facets results are stored in an array with an order
  that reflects their definition.
  * FEATURE : Search results explicit definition
  * FEATURE : (breaking) Search parameters as a separate object
  * FEATURE : (breaking) Move callback style to a event based API
  * FEATURE : change and results events return the state and the results (if any)
  * FEATURE : SearchRefults.getFacetByName to retrieve a facet object from its
  name
  * FEATURE : SearchParameters.getNumericRefinement : get back the value of a specific numeric
  refinement