@@ -130,3 +130,59 @@ test( "isRefined(facet)/hasRefinements should return true if the facet is refine
 
   t.end();
 } );
+
+test( "getRefinements should return all the refinements for a given facet", function( t ) {
+  var helper = algoliasearchHelper( null, null, {
+    facets : [ "facet1" ],
+    disjunctiveFacets : [ "facet2", "sales" ]
+  } );
+
+  helper.addRefine( "facet1", "val1" )
+        .addRefine( "facet1", "val2" )
+        .addExclude( "facet1", "val-1" )
+        .toggleRefine( "facet1", "val3" );
+
+  helper.addDisjunctiveRefine( "facet2", "val4" )
+        .addDisjunctiveRefine( "facet2", "val5" )
+        .toggleRefine( "facet2", "val6" );
+
+  helper.addNumericRefinement( "sales", ">", "3" )
+        .addNumericRefinement( "sales", "<", "9" );
+
+  t.deepEqual( helper.getRefinements( "facet1" ),
+               [
+                 { value : "val1", type : "conjunctive" },
+                 { value : "val2", type : "conjunctive" },
+                 { value : "val3", type : "conjunctive" },
+                 { value : "val-1", type : "exclude" }
+               ],
+               "" );
+
+  t.deepEqual( helper.getRefinements( "facet2" ),
+               [
+                 { value : "val4", type : "disjunctive" },
+                 { value : "val5", type : "disjunctive" },
+                 { value : "val6", type : "disjunctive" }
+               ],
+               "" );
+
+  t.deepEqual( helper.getRefinements( "sales" ),
+               [
+                 { value : "3", operator : ">", type : "numeric" },
+                 { value : "9", operator : "<", type : "numeric" }
+               ],
+               "" );
+
+  t.end();
+} );
+test( "getRefinements should return an empty array if the facet has no refinement", function( t ) {
+  var helper = algoliasearchHelper( null, null, {
+    facets : [ "facet1" ],
+    disjunctiveFacets : [ "facet2" ]
+  } );
+
+  t.deepEqual( helper.getRefinements( "facet1" ), [], "" );
+  t.deepEqual( helper.getRefinements( "facet2" ), [], "" );
+
+  t.end();
+} );
