@@ -3,6 +3,8 @@ CHANGELOG
 UNRELEASED
   * FIX : #92 Parameters that can be set in the dashboard shouldn't have
   defaults
+  * FEATURE : #70 Ability to get all refined values : helper.getRefinements(
+  facetname )
   * FEATURE : #51 multiple filters for a single conjunctive facet (tests)
   * FEATURE : Ability to modify any parameter of the state easily (#76 #84)
   * FEATURE : #69 Ability to know if a facet is refined, whatever the value
